# react-native-permissions

./: .gitignore  README.md  package-lock.json  package.json
harmony/: permissions.har
harmony/permissions/: BuildProfile.ets  oh-package-lock.json5  oh-package.json5  ts.ts
harmony/permissions/src/main/: module.json5
harmony/permissions/src/main/cpp/: CMakeLists.txt  PermissionsPackage.h  PermissionsTurboModule.cpp  PermissionsTurboModule.h
harmony/permissions/src/main/ets/: Logger.ts  PermissionsModule.ts  PermissionsPackage.ts  results.ts
src/: methods.harmony.ts  permissions.android.ts  permissions.harmony.ts  permissions.ios.ts  permissions.ts  permissions.windows.ts  types.ts
